--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^1.0.2",
+		"@headlessui/react": "^1.7.17",
 		"@prisma/client": "^5.3.1",
+		"@tanstack/react-query": "^4.35.3",
 		"next": "latest",
 		"next-auth": "^4.23.1",
 		"react": "latest",
-		"react-dom": "latest"
+		"react-dom": "latest",
+		"react-hot-toast": "^2.4.1"
 	},
 	"devDependencies": {
+		"@iconify/react": "^4.1.1",
 		"@types/node": "^20.7.1",
 		"@types/react": "latest",
 		"@types/react-dom": "latest",
