--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
+		  "dev": "prisma generate && next dev",
+    "build": "prisma generate && prisma db push && next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
 	"dependencies": {
 		"@auth/prisma-adapter": "^1.0.2",
 		"@headlessui/react": "^1.7.17",
