--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
 		"@headlessui/react": "^1.7.17",
 		"@prisma/client": "^5.3.1",
 		"@tanstack/react-query": "^4.35.3",
+		"axios": "^1.5.1",
+		"lodash": "^4.17.21",
 		"next": "latest",
 		"next-auth": "^4.23.1",
+		"prettier-plugin-tailwindcss": "^0.5.4",
 		"react": "latest",
 		"react-dom": "latest",
 		"react-hot-toast": "^2.4.1"
