--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,12 @@
 			"@/*": ["./*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "pages/api/menus/getMenus.ts"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"pages/api/menus/getMenus.ts"
+	],
 	"exclude": ["node_modules"]
 }
