--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@prisma/client": "^5.4.1",
 		"@tanstack/react-query": "^4.35.3",
 		"axios": "^1.5.1",
+		"date-fns": "^2.30.0",
+		"install": "^0.13.0",
 		"lodash": "^4.17.21",
 		"next": "latest",
 		"next-auth": "^4.23.1",
